fix(backend): springdoc exclusion from the sidecar fat jar never worked
The spring-boot-maven-plugin <excludes> entry listed only a groupId, but
the Exclude element requires groupId AND artifactId — the filter silently
matched nothing and every sidecar build shipped springdoc (3 jars in
BOOT-INF/lib plus AOT-generated SpringDocWebServerConfiguration
__BeanDefinitions classes).

Replace it with <excludeGroupIds>org.springdoc</excludeGroupIds>, scoped
to the repackage and process-aot executions: spring-boot:run keeps the
compile classpath (dev Swagger UI still works), and excluding the AOT
step too prevents generated bean definitions from referencing classes
absent from the jar. The openapi profile resets both for debug builds
with docs.

Verified headless on the -Paot jar: 0 springdoc entries, 310 AOT
__BeanDefinitions classes, and 3 cold-start runs to .ready with
spring.aot.enabled=true (median 3658 ms, ~235 MB private memory) — the
AOT context boots cleanly without springdoc. Measurements and the
corrected checklist recorded in PERFORMANCE_BASELINE.md; mechanics
documented in OPERATIONS.md.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>